# spacegame

./: Cargo.toml  README.md
res/def/: faction.json  faction.yaml  layer.json  layer.yaml  menu.yaml  sound.yaml
res/def/entity/: 0_base.yaml  _base.yaml  asteroid.yaml  base.json  base.yaml  explosion.yaml  mine.json  mine.yaml  player.yaml  powerup.yaml
res/def/spawn/: _base.yaml  mine.yaml
res/def/spawner/: _base.yaml  exploder.yaml  player.yaml  weapon.yaml
res/shader/: blur.wgsl  combine.wgsl
src/: bloom.rs  cmd.rs  completion.rs  def.rs  main.rs  prelude.rs  repository.rs  sound.rs  timeframe.rs  timer.rs
src/console/: mod.rs
src/def/: entity.rs  faction.rs  layer.rs  menu.rs  misc.rs  mod.rs  shared.rs  sound.rs  spawner.rs
src/level/: mod.rs
src/level/component/: bounding.rs  computed.rs  controlled.rs  explodes.rs  exploding.rs  explosion.rs  fading.rs  hitpoints.rs  inertial.rs  lifetime.rs  mod.rs  powerup.rs  shooter.rs  spatial.rs  visual.rs
src/level/system/: cleanup.rs  collider.rs  compute.rs  control.rs  inertia.rs  mod.rs  render.rs  upgrader.rs
src/menu/: mod.rs
src/post/: bloom.rs  combine.fs  mod.rs
