[package]
name = "spacegame"
version = "0.1.0"
authors = ["Dennis Möhlmann <dmo479@gmail.com>"]

[dependencies]
shred = "0.5.1"
shred-derive = "0.3.0"
specs = "0.10.0"
radiant-rs = "0.12.1"
radiant-utils = "0.1.5"
serde = "1.0"
serde_yaml = "0.7.3"
serde_derive = "1.0"
yaml-merge-keys = { version = "0.2.0", features = [ "serde_yaml" ] }
rodio = "0.7.0"

[profile.dev]
opt-level = 2
