[package]
name = "spacegame"
version = "0.1.0"
authors = ["Dennis Möhlmann <dmo479@gmail.com>"]

[dependencies]
hecs = "0.10"
radiant-rs = { version = "0.15", features = [ "serialize-serde" ] }
radiant-utils = { version = "0.5", features = [ "serialize-serde" ] }
serde = "1.0"
serde_yaml = "0.7.3"
serde_derive = "1.0"
yaml-merge-keys = { version = "0.2.0", features = [ "serde_yaml" ] }
rodio = "0.7.0"
unicode-segmentation = "1.2.1"
lazy_static = "1.0.0"

[profile.dev]
opt-level = 2
